# pippino

./: .data  .gitignore  README.md  apt-pippino-installed.txt  bashrc_pippino.sh  cyclonedds.xml  d455.yaml  d455_extrinsics.txt  d455_old.yaml  d455_wrapper4.0.yaml  fastrtps.xml  fastrtps_client.xml  fastrtps_server.xml  fastrtps_super_client.xml  fastrtps_v1.xml  install_ros_talker_listener_docker.sh  pippino-inference-entrypoint.sh  pippino-realsense-d455-entrypoint.sh  pippino-realsense-entrypoint.sh  pippino-realsense-t265-entrypoint.sh  pippino-services-entrypoint.sh  pippino-services-entrypoint_interactive.sh  pippino_ws.sublime-project  pippino_ws.sublime-workspace  pippino_ws_remote.code-workspace  source_ros.sh  start_rosbridge.sh  test_rtps_entrypoint.sh
docker_image_setup/: #run_interactive.sh#  Dockerfile_realsense  Dockerfile_services  Dockerfile_ubu18_realsense  Dockerfile_ubu20_base  Dockerfile_ubu20_services  build_image_f6.1_services.sh  build_image_g6.1_realsense.sh  build_image_stage_2.sh  build_ubu18_realsense.sh  build_ubu18_realsense4.sh  build_ubu20_base.sh  build_ubu20_services.sh  run_daemon.sh  run_daemon.sh~  run_daemon_realsense.sh  run_daemon_realsense_d455.sh  run_daemon_realsense_t265.sh  run_daemon_services.sh  run_daemons.sh  run_interactive_inference.sh  run_interactive_realsense.sh  run_interactive_realsense_d455.sh  run_interactive_realsense_depth.sh  run_interactive_realsense_t265.sh  run_interactive_services.sh  run_interactive_withdev.sh  run_interactive_withdev.sh~  stop_daemon_services.sh  stop_daemons.sh
docker_image_setup/obsolete/: Dockerfile.full  Dockerfile.full~  Dockerfile.rs50  Dockerfile_ubu18_realsense4  Dockerfile_ubu20_full  Dockerfile_ubu20_realsense  build_image_stage_1.sh  build_ubu18_realsense4.sh  build_ubu20_full.sh  run_daemon_realsense.sh  run_daemon_realsense_separate.sh  run_interactive.sh  run_interactive.sh~  run_interactive_realsense.sh  run_interactive_realsense_depth.sh  test_rtps_rs.sh  test_rtps_sv.sh
docker_image_setup/ubu20_galactic/: Dockerfile_ubu20_base  Dockerfile_ubu20_realsense  build_ubu20_base.sh  build_ubu20_realsense.sh  build_ubu20_services.sh
docker_image_setup/ubu_humble/: Dockerfile_ubu_base  Dockerfile_ubu_realsense  Dockerfile_ubu_services  build_all.sh  build_ubu_base.sh  build_ubu_realsense.sh  build_ubu_realsense_d455.sh  build_ubu_services.sh
explorer_interfaces/: CMakeLists.txt
explorer_interfaces/action/: Discover.action
hole_detection_costmap_plugin/: CMakeLists.txt  package.xml  voxel_layer.xml
hole_detection_costmap_plugin/include/hole_detection_costmap_plugin/: voxel_layer.hpp
hole_detection_costmap_plugin/src/: voxel_layer.cpp
is_aruco_visible_bt_condition_plugin/: CMakeLists.txt  aruco_visible_condition_node.xml  package.xml
is_aruco_visible_bt_condition_plugin/include/is_aruco_visible_bt_condition_plugin/: is_aruco_visible_condition.hpp
is_aruco_visible_bt_condition_plugin/src/: is_aruco_visible_condition.cpp
pippino_autodock_manual/scripts/: simple_autodock.py
pippino_bringup/: CMakeLists.txt  package.xml
pippino_bringup/config/: joystick.yaml
pippino_bringup/launch/: bringup.launch.py  bringup_full.launch.py  pippino.launch.py  pippino.launch.py~  rs_d400_and_t265_launch.py  rs_d455_launch.py  rs_launch.py  rs_multi_camera_launch.py  rs_t265_launch.py
pippino_bringup/odom_calib/: t265_position_calib.json
pippino_bringup/scripts/: set_param.py
pippino_bringup/tools/: uhubctl
pippino_bringup/useful_commands/: commands.txt
pippino_commander/: package.xml  setup.cfg  setup.py
pippino_commander/pippino_commander/: pippino_commander.py
pippino_commander_interface/: CMakeLists.txt  package.xml
pippino_commander_interface/action/: PippinoCommander.action
pippino_description/: CMakeLists.txt  package.xml
pippino_description/config/: bt_navigate_to_pose.xml  ekf.yaml  ekf_example.yaml  ekf_no_T265.yaml  nav2_params.yaml
pippino_description/launch/: description.launch.py  display.launch.py  nav2.launch.py  pointcloud.launch.py
pippino_description/maps/: upper_floor.pgm.kra  upper_floor.pgm.kra~  upper_floor.pgm~
pippino_description/rviz/: pippino_config.rviz
pippino_display/: CMakeLists.txt  package.xml
pippino_display/launch/: display.launch.py
pippino_display/rviz/: pippino_config.rviz  point_cloud.rviz
pippino_navigation/: CMakeLists.txt  package.xml
pippino_navigation/config/: bt_navigate_through_poses_w_replanning_and_recovery.xml  bt_navigate_to_pose.xml  calib_all.txt  calibration_D455_1280x800.yaml  calibration_D455_640x360.yaml  calibration_T265_fisheye1.yaml  calibration_charuco_manual.yaml  default_params.yaml  nav2_params.yaml  nav2_params_bak_foxy.yaml  nav2_params_galactic.yaml  nav2_params_humble.yaml  nav2_params_humble.yaml.bak  slam_params.yaml
pippino_navigation/config_obsolete/: bt_navigate_to_pose.xml  calibration_charuco.yaml  nav2_params_bak_galactic.yaml
pippino_navigation/launch/: bringup.launch.py  bringup_launch.py  navigation.launch.py  navigation_launch.py
pippino_navigation/maps/: upper_floor.pgm  upper_floor.pgm.kra  upper_floor.yaml
pippino_navigation/scripts/: charuco_localization.py  fiducials_tf_publisher.py  navigate_manual.py  navigate_to_aruco.py  undistort_fisheye.py  (+2 more)
pippino_odom/: CMakeLists.txt  package.xml
pippino_odom/launch/: odom.launch.py  odom.launch.py~
pippino_odom/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pippino_odom/src/: pippino_odom.cpp
pippino_service_msg/: CMakeLists.txt  package.xml
pippino_up_detection/: package.xml  setup.cfg  setup.py
pippino_up_detection/pippino_up_detection/: mqtt.py  pippino_up_detection.py
video_stream_controller/: package.xml  setup.cfg  setup.py
video_stream_controller/video_stream_controller/: video_stream_controller.py
video_stream_controller_cpp/: CMakeLists.txt  package.xml
video_stream_controller_cpp/launch/: video_stream_controller.launch.py
video_stream_controller_cpp/src/: video_stream_controller.cpp
video_stream_controller_cpp_condemned/: CMakeLists.txt  package.xml
(+20 files in other folders)
