<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hole_detection_costmap_plugin</name>
  <version>1.0.0</version>
  <description>Run-time plugin for Costmap2D layer with hole detection</description>
  <maintainer email="michele.demarchi.85@gmail.com">Michele De Marchi</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>nav2_voxel_grid</depend>
  <depend>rclcpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/voxel_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
