<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>video_stream_controller</name>
  <version>0.0.0</version>
  <description>Video Stream Controller, that can turn on or off video streams from Pippino's cameras.</description>
  <maintainer email="michele.demarchi.85@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msg</depend>
  <depend>sensor_msg</depend>
  <depend>pippino_service_msg</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
