<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>video_stream_controller_cpp</name>
  <version>0.0.0</version>
  <description>Video Stream Controller, that can turn on or off video streams from Pippino's cameras.</description>
  <maintainer email="michele.demarchi.85@gmail.com">Michele De Marchi</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>OpenCV</buildtool_depend>
  <buildtool_depend>rcl_interfaces</buildtool_depend>
  <buildtool_depend>cv_bridge</buildtool_depend>
  <buildtool_depend>pippino_service_msg</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
